compiler_project/grammer
<program> ::= <statement> | <program> <statement>
<statement> ::= <assignment> | <expr>
<assignment> ::= <identifier> "=" <expr>;
<expr> ::= <term> | <expr> "+" <term> | <expr> "-" <term>
<term> ::= <factor> | <term> "*" <factor> | <term> "/" <factor>
<factor> ::= <number> | <identifier> | "(" <expr> ")"
<number> ::= [0-9]+
<identifier> ::= [a-zA-Z_][a-zA-Z0-9_]*
